# acoustic-engine

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  perceptual_editor.py  perceptual_editor_gui.py  run_tests.bat  run_tests.ps1  test_iso.c
bindings/: __init__.py  ae_wrapper.py
bindings/unity/: AcousticEngine.cs  AcousticEngineAudioFilter.cs  AcousticEngineNative.cs
docs/: 260121_dev.md  260121_dev2.md  gap_analysis.md  implementation_plan_phase2.md  perceptual_editor_guide_ja.md  requirements_en.md  requirements_ja.md
include/: acoustic_engine.h
src/: acoustic_engine.c  ae_analysis.c  ae_audio_io.c  ae_auditory.c  ae_deesser.c  ae_drnl.c  ae_dsp.c  ae_dynamics.c  ae_eq.c  ae_internal.h  ae_math.c  ae_modfb.c  ae_perceptual.c  ae_presets.c  ae_propagation.c  ae_reverb.c  ae_simd.c  ae_slm.c  ae_spatial.c  ae_version.c
tests/: ae_test.h  test_analysis.c  test_auditory.c  test_dsp.c  test_math.c  test_propagation.c  test_simd.c
